--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "src/server.js",
   "type": "commonjs",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
