--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "twitter-api-v2": "^1.27.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
