--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
+    "tesseract.js": "^6.0.1",
     "twitter-api-v2": "^1.27.0"
   },
   "devDependencies": {
